z-index solved 2

--- a/src/App.scss
+++ b/src/App.scss
@@ -138,7 +138,6 @@ a {
         display: none;        
       }
       #menu-mobile {
-        z-index: 2;
         display: flex;
         justify-content: space-around;
         align-items: center;
@@ -174,6 +173,7 @@ a {
         display: none;
       }
       .mobile-links {
+        z-index: 3;
         @include flex-column();
         justify-content: flex-start;
         position: absolute;
